--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
       <h1>Tetris!</h1>
     </header>
-    <main></main>
+    <main>
+      <div class="container"></div>
+    </main>
   </body>
 </html>
